[gd_scene load_steps=8 format=3 uid="uid://c72dbf65ng713"]

[ext_resource type="Script" path="res://Code/ItemList.gd" id="1_h2qjl"]
[ext_resource type="Resource" uid="uid://c4ybepliryrjc" path="res://Resource/WeaponResource/Pistol.tres" id="2_5wexv"]
[ext_resource type="Resource" uid="uid://d1qk55e54tvvb" path="res://Resource/WeaponResource/Rifle.tres" id="3_ddo7f"]
[ext_resource type="Resource" uid="uid://dstfhy6rymr6b" path="res://Resource/Char/char.tres" id="4_h0keu"]
[ext_resource type="FontFile" uid="uid://ylvptlhficyq" path="res://Scenes/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" id="5_dw1q6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fi043"]
bg_color = Color(0.388235, 0.647059, 0.690196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7w50"]
bg_color = Color(0.0745098, 0.701961, 0.545098, 1)

[node name="Node3D" type="Node3D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_fi043")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.191
anchor_right = 0.347
anchor_bottom = 0.809
offset_top = 0.231987
offset_right = 0.255981
offset_bottom = -0.231995
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_r7w50")

[node name="ItemList" type="ItemList" parent="CanvasLayer/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
max_text_lines = 4
same_column_width = true
fixed_icon_size = Vector2i(100, 100)
script = ExtResource("1_h2qjl")
weapons = Array[Resource("res://Code/weapon_resource.gd")]([ExtResource("2_5wexv"), ExtResource("3_ddo7f")])
char = ExtResource("4_h0keu")

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67
anchor_top = 0.191
anchor_right = 1.0
anchor_bottom = 0.809
offset_left = -19.84
offset_top = 0.231987
offset_bottom = -0.231995
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 6

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Panel/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_r7w50")

[node name="GunList" type="ItemList" parent="CanvasLayer/Panel/VBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
max_text_lines = 4
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2i(100, 100)

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -66.0
offset_right = 157.0
offset_bottom = -8.0
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 10

[node name="Atgal" type="Button" parent="CanvasLayer/Panel/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_dw1q6")
theme_override_font_sizes/font_size = 36
text = "ATGAL"

[node name="VBoxContainer4" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -29.0
offset_right = 61.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Upgrade" type="Button" parent="CanvasLayer/Panel/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("5_dw1q6")
theme_override_font_sizes/font_size = 36
text = "=>"

[node name="VBoxContainer5" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -58.0
offset_right = 71.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Change" type="Button" parent="CanvasLayer/Panel/VBoxContainer5"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("5_dw1q6")
theme_override_font_sizes/font_size = 36
text = "Ginklai"

[connection signal="item_selected" from="CanvasLayer/Panel/VBoxContainer/ScrollContainer/ItemList" to="CanvasLayer/Panel/VBoxContainer/ScrollContainer/ItemList" method="_on_item_selected"]
[connection signal="item_selected" from="CanvasLayer/Panel/VBoxContainer2/ScrollContainer/GunList" to="CanvasLayer/Panel/VBoxContainer/ScrollContainer/ItemList" method="_on_gun_list_item_selected"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer3/Atgal" to="CanvasLayer/Panel/VBoxContainer/ScrollContainer/ItemList" method="_on_atgal_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer4/Upgrade" to="CanvasLayer/Panel/VBoxContainer/ScrollContainer/ItemList" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer5/Change" to="CanvasLayer/Panel/VBoxContainer/ScrollContainer/ItemList" method="_on_change_pressed"]
